# python-template

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.sh
pythonic/: common.py  data.py  documentation.py  function.py  general.py  performance.py  safety.py
template/: main.py
tests/: test_main.py
